--- a/index.html
+++ b/index.html
@@ -4,20 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="index.css" />
     <title>Unit Converter</title>
   </head>
   <body>
     <main class="container">
       <div class="display-area">
         <h1>Metric/Imperial Unit Conversion</h1>
-        <input
-          type="text"
-          id="type"
-          placeholder="0"
-          name="#"
-          oninput="pEnter()"
-        />
+        <input type="text" placeholder="0" id="input-el">
+        <button id="button-el" onclick="pEnter()">Converter</button>
       </div>
     <div class="box">
       <div class="length-box">
